Colour Change for Gear3
lots of ovew

--- a/Gear3.html
+++ b/Gear3.html
@@ -10,7 +10,7 @@
 <!-- InstanceEndEditable -->
 </head>
 
-<body style="background-color: #D4D4D4">
+<body style="background-color: #aa00ff">
 		
 		<hr>
 			 <h3 align="right"> Supporting your sporting needs since 1856. </h3>
